--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: var(--background-color);
     color: var(--text-color);
-    font-family: 'Arial', sans-serif;
+    font-family: var(--font-family);
     transition: background-color 0.3s, color 0.3s;
 }
 
