--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -15,7 +15,7 @@
 
 body.dark {
     /* Dark tema renkleri */
-    --primary-color: #0A84FF;
+    --primary-color: #00FF00;
     --background-color: #1A1A1A;
     --text-color: #FFFFFF;
     --secondary-color: #2C2C2C;
