--- a/src/components/terminal/terminal.css
+++ b/src/components/terminal/terminal.css
@@ -11,9 +11,9 @@
     padding: 30px;
     z-index: 998;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-    transition: all 0.3s ease;
     opacity: 0;
     visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
 .terminal-container.visible {
@@ -120,12 +120,32 @@
 /* Tablet yatay */
 @media (max-width: 1024px) {
     .terminal-container {
-        width: 90%;
+        width: 700px;
         height: 500px;
         padding: 20px;
     }
     
     .terminal-content {
+        width: 100%;
+        height: 400px;
+        font-size: 16px;
+    }
+    
+    .terminal-input-line {
+        font-size: 16px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 768px) {
+    .terminal-container {
+        width: 550px;
+        height: 500px;
+        padding: 20px;
+    }
+    
+    .terminal-content {
+        width: 100%;
         height: 400px;
         font-size: 16px;
     }
@@ -149,7 +169,7 @@
         border-right: none;
         border-radius: 0;
         padding: 15px;
-        margin-top: 10px;
+        margin-top: 70px;
     }
     
     .terminal-content {
