--- a/src/components/terminal/terminal.css
+++ b/src/components/terminal/terminal.css
@@ -1,6 +1,5 @@
 .terminal-container {
     position: fixed;
-    top: 80px;
     left: 50%;
     transform: translate(-50%, 5%);
     width: 1000px;
@@ -13,7 +12,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 .terminal-container.visible {
@@ -27,7 +26,6 @@
     font-size: 20px;
     white-space: pre-wrap;
     margin-bottom: 10px;
-    height: 600px;
     overflow-y: auto;
     padding: 5px;
 }
@@ -78,12 +76,15 @@
 /* Büyük ekranlar */
 @media (min-width: 1921px) {
     .terminal-container {
-        width: 1200px;
-        height: 700px;
+        width: 44%;
+        height: 600px;
+        left: 30%;
+        transform: translateX(-50%);
+        top: 160px;
     }
     
     .terminal-content {
-        height: 600px;
+        height: 500px;
         font-size: 22px;
     }
 }
@@ -91,8 +92,11 @@
 /* Normal masaüstü */
 @media (max-width: 1920px) {
     .terminal-container {
-        width: 1000px;
+        width: 42%;
         height: 600px;
+        left: 30%;
+        transform: translateX(-50%);
+        top: 160px;
     }
     .terminal-content {
         height: 500px;
@@ -103,8 +107,9 @@
 /* Küçük masaüstü ve laptop */
 @media (max-width: 1440px) {
     .terminal-container {
-        width: 800px;
+        width: 35%;
         height: 600px;
+        left: 25%;
     }
     
     .terminal-content {
@@ -117,18 +122,20 @@
     }
 }
 
-/* Tablet yatay */
-@media (max-width: 1024px) {
+
+/* 1024px ve altı ekranlar için terminal */
+@media (max-width: 1023px) {
     .terminal-container {
-        width: 700px;
-        height: 500px;
-        padding: 20px;
+        width: 80%;
+        height: 450px;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 150px;
     }
-    
+
     .terminal-content {
-        width: 100%;
-        height: 400px;
-        font-size: 16px;
+        height: 350px;
+        font-size: 18px;
     }
     
     .terminal-input-line {
@@ -142,6 +149,7 @@
         width: 550px;
         height: 500px;
         padding: 20px;
+        top: 100px;
     }
     
     .terminal-content {
@@ -156,11 +164,11 @@
     }
 }
 
-/* Tablet dikey */
+/* Mobil ekranlar için ek düzenlemeler */
 @media (max-width: 576px) {
     .terminal-container {
         position: relative;
-        top: 30px;
+        top: 90px;
         left: 0;
         transform: none;
         width: 100%;
@@ -169,7 +177,6 @@
         border-right: none;
         border-radius: 0;
         padding: 15px;
-        margin-top: 70px;
     }
     
     .terminal-content {
