--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,4 +1,4 @@
-.hero-section {
+#home {
     height: calc(100vh - 60px);
     position: relative;
     overflow: hidden;
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 300px;
 }
 
 .hero-content {
@@ -174,7 +175,6 @@
         transform: translateY(50%);
         width: 100%;
         height: 50vh;
-        top: 300px;
     }
 
     /* Hero içeriğini yeni boyuta göre ayarla */
@@ -190,16 +190,17 @@
 
 /* Mobil görünüm için hero düzenlemeleri */
 @media (max-width: 576px) {
-    .hero-section {
-        height: calc(100vh - 60px);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    .hero-section.terminal-open {
+        transform: translateY(20%);
+        width: 100%;
+        height: 50vh;
+        float: bottom;
     }
 
     .hero-container {
-        height: 100%;
+        height: 50%;
         align-items: center;
+        top: 200px;
     }
 
     .hero-content {
