--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,9 +22,12 @@ body {
 }
 
 #main-content {
+    padding-top: 60px; /* Navbar yüksekliği */
+}
+
+section {
     min-height: 100vh;
     width: 100%;
-    position: relative;
 }
 
 /* Animasyonlar */
@@ -112,4 +115,12 @@ body {
     .nav-links.active {
         right: 0;
     }
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+#about {
+    scroll-margin-top: 60px; /* Navbar yüksekliği kadar margin */
 } 
