--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -23,7 +23,7 @@
     transition: all 0.3s ease;
     opacity: 0;
     transform: translateY(30px);
-    transition: all 0.5s ease;
+    transition: opacity 0.5s ease, transform 0.5s ease;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -392,4 +392,10 @@
     .popup-content .project-image {
         height: 300px;
     }
+}
+
+.project-card.hidden {
+    display: none;
+    opacity: 0;
+    transform: translateY(20px);
 }
